# rules-templ

./: BUILD.bazel  MODULE.bazel  Makefile  go.mod  go.sum  tools.go
.github/workflows/: auto-merge.yaml
templ/: BUILD.bazel  defs.bzl  extensions.bzl
templ/private/: BUILD.bazel  actions.bzl  actions_test.bzl  binary.bzl  extensions.bzl  templ.bzl
